--- a/style.yml
+++ b/style.yml
@@ -1,8 +1,8 @@
 version: 8
 center:
-  - 139.76442
-  - 35.6875
-zoom: 13.955760822635057
+  - 135.193326
+  - 34.705834
+zoom: 15.73
 bearing: 60
 pitch: 60
 sources:
